refactored with UserDto