@@ -7,6 +7,7 @@ import org.springframework.test.context.ActiveProfiles;
 
 import java.math.BigDecimal;
 import java.time.LocalDateTime;
+import java.util.UUID;
 
 import static org.junit.jupiter.api.Assertions.assertTrue;
 
@@ -21,15 +22,15 @@ class ShoppingCartRepositoryIT {
     void testCreateAndRead() {
         assertTrue(this.shoppingCartRepository.findAll().stream()
                 .anyMatch(cart ->
-                        "user1" .equals(cart.getUser()) &&
+                        UUID.fromString("aaaaaaaa-bbbb-cccc-dddd-eeeeffff0004").equals(cart.getUser()) &&
                                 "address 1" .equals(cart.getAddress()) &&
                                 cart.getId() != null &&
                                 cart.getCreationDate() != null &&
                                 cart.getCreationDate().isBefore(LocalDateTime.now()) &&
                                 2 == cart.getArticleItemEntities().size() &&
-                                "84001" .equals(cart.getArticleItemEntities().get(0).getArticleEntity().getBarcode()) &&
-                                1 == cart.getArticleItemEntities().get(0).getAmount() &&
-                                0 == BigDecimal.ZERO.compareTo(cart.getArticleItemEntities().get(0).getDiscount())
+                                "84001" .equals(cart.getArticleItemEntities().getFirst().getArticleEntity().getBarcode()) &&
+                                1 == cart.getArticleItemEntities().getFirst().getAmount() &&
+                                0 == BigDecimal.ZERO.compareTo(cart.getArticleItemEntities().getFirst().getDiscount())
                 ));
     }
 }
